--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/artichoke-lasagna.html">Artichoke Lasagna Recipe</a>
+
+    <ul>
+    <li><a href="./recipes/artichoke-lasagna.html">Artichoke Lasagna Recipe</a></li>
+    <li><a href="./recipes/Adobo.html">Adobo Recipe</a></li>
+    <li><a href="./recipes/Sinigang-na-baboy.html">Sinigang na Baboy</a></li>
+    </ul>
 </body>
 </html>
