Added classes for css design

--- a/recipes/Sinigang-na-baboy.html
+++ b/recipes/Sinigang-na-baboy.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sinigang-na-baboy</title>
 </head>
 <body>
-    <h1>Sinigang na Baboy</h1>
+    <h1 class="title">Sinigang na Baboy</h1>
     <img src="../images/sinigang-na-baboy.jpg" alt="Sinigang na Baboy">
 
-    <h3>Description</h3>
+    <h3 class="title">Description</h3>
 
-    <p>Sinigang is a classic Filipino soup characterized by its sour and savory medley of flavors. Its popular comfort food in the Philippines,  usually served on its own or paired with steamed rice on rainy days to ward off the cold.</p>
+    <p class="text">Sinigang is a classic Filipino soup characterized by its sour and savory medley of flavors. Its popular comfort food in the Philippines,  usually served on its own or paired with steamed rice on rainy days to ward off the cold.</p>
 
-    <p>Like adobo, the term sinigang describes more a cooking method than a particular dish as it comes with many variations. It can be made with protein such as pork, fish, shrimp, beef, and chicken and souring agents such as tamarind, guava, green mango, calamansi, kamias, batuan, santol, and other native fruits.</p>
+    <p class="text">Like adobo, the term sinigang describes more a cooking method than a particular dish as it comes with many variations. It can be made with protein such as pork, fish, shrimp, beef, and chicken and souring agents such as tamarind, guava, green mango, calamansi, kamias, batuan, santol, and other native fruits.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class="title">Ingredients</h3>
 
-    <ul>
+    <ul class="text">
         <li>2 pounds pork spare ribs, cut into 2-inch pieces</li>
         <li>8 cups water</li>
         <li>2 large tomatoes, quartered</li>
@@ -35,9 +36,9 @@
         <li>1 bunch bok choy or pechay, ends trimmed and separated into leaves</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="title">Steps</h3>
 
-    <ol>
+    <ol class="text">
         <li>Rinse pork ribs and drain well.</li>
         <li>In a pot over medium heat, combine pork and enough water to cover. Bring to a boil, skimming scum that accumulates on top.</li>
         <li>Once broth clears, add tomatoes, onion, and fish sauce. Lower heat and simmer for about 1 to 1 1/2 hours or until meat is tender, adding more water as necessary to maintain about 8 cups.</li>
