--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
 
     <ul>
-    <li><a href="./recipes/artichoke-lasagna.html">Artichoke Lasagna Recipe</a></li>
-    <li><a href="./recipes/Adobo.html">Adobo Recipe</a></li>
-    <li><a href="./recipes/Sinigang-na-baboy.html">Sinigang na Baboy</a></li>
+    <li><a href="./recipes/artichoke-lasagna.html" class="text">Artichoke Lasagna Recipe</a></li>
+    <li><a href="./recipes/Adobo.html" class="text">Adobo Recipe</a></li>
+    <li><a href="./recipes/Sinigang-na-baboy.html" class="text">Sinigang na Baboy</a></li>
     </ul>
 </body>
 </html>
