--- a/recipes/Adobo.html
+++ b/recipes/Adobo.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Adobo</title>
 </head>
 <body>
-    <h1>Adobo Recipe</h1>
+    <h1 class="title">Adobo Recipe</h1>
     <img src="../images/Adobo.jpg" alt="Chicken Adobo">
-    <h3>Filipino Chicken Adobo</h3>
-    <p>Filipino Chicken Adobo is the national dish of the Philippines and may well become your new favourite Asian chicken dish! Just a few everyday ingredients I can practically guarantee you already have, its an effortless recipe that yields juicy, tender chicken coated in a sweet savoury glaze with little pops of heat from peppercorns.</p>
+    <h3 title="">Filipino Chicken Adobo</h3>
+    <p class="text">Filipino Chicken Adobo is the national dish of the Philippines and may well become your new favourite Asian chicken dish! Just a few everyday ingredients I can practically guarantee you already have, its an effortless recipe that yields juicy, tender chicken coated in a sweet savoury glaze with little pops of heat from peppercorns.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class="title">Ingredients</h3>
 
-    <ul>
+    <ul class="text">
         <li>750g / 1.5 lb chicken thigh fillets , boneless and skinless (5 - 6 pieces)</li>
         <li>3 garlic cloves , minced</li>
         <li>1/3 cup (85ml) soy sauce , ordinary all purpose or light</li>
@@ -28,9 +29,9 @@
         <li>2 green onions/scallions , sliced (garnish)</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="title">Steps</h3>
 
-    <ol>
+    <ol class="text">
         <li>Combine Chicken and Marinade ingredients in a bowl. Marinate for at least 20 minutes, or up to overnight.</li>
         <li>Heat 1 tbsp oil in a skillet over high heat. Remove chicken from marinade (reserve marinade) and place in the pan. Sear both sides until browned, about 1 minute on each side. Do not cook the chicken all the way through.</li>
         <li>Remove chicken skillet and set aside.</li>
