--- a/recipes/artichoke-lasagna.html
+++ b/recipes/artichoke-lasagna.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1 class="title">Lasagna Recipe</h1>
     <img src="../images/artichoke-lasagna.jpg" alt="Artichoke Lasagna">
 
-    <h3>Home Made Artichoke Spinach Lasagna</h3>
+    <h3 class="title">Home Made Artichoke Spinach Lasagna</h3>
 
-    <p>This is a fabulous lasagna made with an artichoke and spinach mixture which has been cooked with vegetable broth, onions and garlic. The mixture is layered with lasagna noodles, pasta sauce, mozzarella cheese, and topped with crumbled feta.</p>
+    <p class="text">This is a fabulous lasagna made with an artichoke and spinach mixture which has been cooked with vegetable broth, onions and garlic. The mixture is layered with lasagna noodles, pasta sauce, mozzarella cheese, and topped with crumbled feta.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class="title">Ingredients</h3>
 
-    <ul>
+    <ul class="text">
         <li>cooking spray</li>
         <li>9 uncooked lasagna noodles</li>
         <li>1 onion, chopped</li>
@@ -28,11 +29,11 @@
         <li>1 (28 ounce) jar tomato pasta sauce</li>
         <li>3 cups shredded mozzarella cheese, divided</li>
         <li>1 (4 ounce) package herb and garlic feta, crumbled</li>
-    </ul>
+    </ul class="text">
 
-    <h3>Steps</h3>
+    <h3 class="title">Steps</h3>
 
-    <ol>
+    <ol class="text">
         <li>Preheat oven to 350 degrees F (175 degrees C). Spray a 9x13 inch baking dish with cooking spray.</li>
         <li>Bring a large pot of lightly salted water to a boil. Add noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
         <li>Spray a large skillet with cooking spray and heat on medium-high. Saute onion and garlic for 3 minutes, or until onion is tender-crisp. Stir in broth and rosemary; bring to a boil. Stir in artichoke hearts and spinach; reduce heat, cover and simmer 5 minutes. Stir in pasta sauce.</li>
